--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -1,11 +1,11 @@
 :root {
-  --primary: #00c2bd;
+  --primary: #232323;
   --secondary: #000;
   --lightGrey: whitesmoke;
   --midGrey: #cacaca;
   --darkGrey: #272727;
   --danger: #ff3d3d;
-  --font-primary: 'Open Sans', sans-serif;
+  --font-primary: 'Lato', sans-serif;
   --font-system: system-ui; /* postcssPresetEnv */
   --borderRadius: 3px;
 }
@@ -23,7 +23,7 @@
 }
 
 ::selection {
-  background: rgba(0, 194, 189, 0.6);
+  background: rgba(250, 250, 250, 0.1);
 }
 
 html {
